--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -75,12 +75,13 @@
                 </div> 
             </div>
             <div class="lineaCentral"></div><!--Línea que aparece cerca del centro-->
+            
             <!--ESTO ES PARTE DE LA PANTALLA INICIAL-->  
             <div id="seccionInicio" class="contenidoDerecho">
                 <div class="recomendacionesDia"><!--contenedor que encapsula toda la sección derecha-->
                 <div class="todasRecomendaciones">
                     <h1 class="centrar">Recomendaciones Del Día</h1>
-                    <div class="seccionDerecha"><!--contenedor que incluye las 4 recomendaciones de canciones-->
+                    <div id="seccionDerecha" class="ladoDerechaRecomen"><!--contenedor que incluye las 4 recomendaciones de canciones-->
                         <div class="dosRec">
                             <button class="recomendacion">
                                 <img src="../Statics/img/.png" class="item-img">
