Ocultar mixes al cambiar de vista

--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -75,7 +75,7 @@
                     </div>
                 </div><!--Aquí poner el reproductor de música-->  
                 <br>
-                <div class="cuadroMixes"> <!--contenedor que incluye las tres recomendaciones principales-->
+                <div class="cuadroMixes" id="contenedorMixesOcultar"> <!--contenedor que incluye las tres recomendaciones principales-->
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
                     <button class="botonesMix botonesAnim" id="">Mix</button>
