--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -57,7 +57,7 @@
             </div>
             <div class="seccionIzquierda">  
                 <div class="reproductorMusica">
-                    <div id="datosdelReproductor">
+                    <div id="datosdelReproductor"><!--Aquí poner el reproductor de música-->  
                         <img id="imagenReproduciendo">
                         <div id="info">
                             <div id="nombreCancion"></div>
@@ -73,9 +73,9 @@
                         <input type="range" max="100"  id="volumeSlider">
                         </div> 
                     </div>
-                </div><!--Aquí poner el reproductor de música-->  
+                </div>
                 <br>
-                <div class="cuadroMixes"> <!--contenedor que incluye las tres recomendaciones principales-->
+                <div class="cuadroMixes" id="contenedorMixes"> <!--contenedor que incluye las tres recomendaciones principales-->
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
                     <button class="botonesMix botonesAnim" id="">Mix</button>
