--- a/Statics/styles/inicioCss.css
+++ b/Statics/styles/inicioCss.css
@@ -1,7 +1,6 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
 }
 body{
     display: flex;
@@ -92,8 +91,9 @@ body{
     display: flex;
     justify-content: center;
     flex-flow: column;
-    margin: auto;
+    /*margin: auto;*/
     padding: 30px;
+    width: 50%;
     background-color: rgba(255, 255, 255, 0.678);
     border-radius: 10px;
 }
