--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -114,16 +114,16 @@
                             <img src="../Statics/img/.jpg" class="album-img">
                             <p>(nombre del Albúm)</p>
                             </button>
-                            <div class="recomendacionArtista">
+                            <div class="recomendacionArtista" id="contenedor-artistas">
                                 <button class="noFormato">
                                     <img src="../Statics/img/.jpg" class="artista-img">
                                     <p>(nombre del artista1)</p>
                                 </button>
-                                <button class="noFormato">
+                                <button class="noFormato" id="contenedor-artistas">
                                     <img src="../Statics/img/.jpg" class="artista-img">
                                     <p>(nombre del artista2)</p>
                                 </button>
-                                 <button class="noFormato">
+                                 <button class="noFormato" id="contenedor-artistas">
                                     <img src="../Statics/img/.jpg" class="artista-img">
                                     <p>(nombre del artista3)</p>
                                 </button>
