funcionalidad inicio de sesion

--- a/Templates/inicioSesion.html
+++ b/Templates/inicioSesion.html
@@ -26,6 +26,7 @@
         </div>
         <br>
         <button id="registrarseBtn">Registrarse</button>
+        <div id="mensaje"></div>
     </div>
     
     <div id="vistaRegistrarse" class= "inactivo">
@@ -102,6 +103,7 @@
                     <span id="portadaVacia" style="color: red;"></span><br><br>
                 </div>
                 <button type="submit" id="crearUsuarioBtn" class="botonesISR">Crear cuenta</button>
+                <div id="mensaje"></div>
             </form>
         </div>
     </div>
