--- a/Templates/inicioSesion.html
+++ b/Templates/inicioSesion.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="..\Statics\styles\inicioCss.css">
 </head>
 <body>
-    <div id="vistaInicioSesion">
+    <div class="contenedorParaInicio">
+       <div id="vistaInicioSesion">
         <div id="imgForm" class="activo">
             <img src="../Statics\media\imgs\usuarioInicioSesion.png" id="imgInicioSesion">
             <div id="incioSesion">
@@ -21,12 +22,13 @@
                     <span id="contraCorta" class="spansIS" style="color:red;"></span>
                     <br>
                     <button type="submit" id="inicioSesionBtn" class="botonesISR">Iniciar sesión</button>
+                    <button id="registrarseBtn">Registrarse</button>
                 </form>
             </div>
         </div>
         <br>
-        <button id="registrarseBtn">Registrarse</button>
         <div id="mensaje"></div>
+        </div> 
     </div>
     
     <div id="vistaRegistrarse" class= "inactivo">
