--- a/Templates/inicioSesion.html
+++ b/Templates/inicioSesion.html
@@ -14,7 +14,7 @@
             <div id="incioSesion">
                 <p> </p>
                 <br>
-                <form id="formInicioSesion" action="" method="post" style="height: 70%;">
+                <form id="formInicioSesion" action="" method="post">
                     <input type="text" id="usuario" name="usuario" placeholder="Usuario" >
                     <span id="usuarioMal" class="spansIS"></span>
                     <br>
