--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -16,7 +16,11 @@
             <div  id="result-autor"> </div>
             <div  id="result-album"> </div>
         </div>  
-      <img src="../Statics/media/imgs/logoTuneSix.png" class="logoTuneSix">
+        <article>Perfil
+            <a href=".\vistaperfil.html">
+                <img src="../Statics/media/imgs/logoTuneSix.png" class="logoTuneSix">      <!--Logo que lleva a perfil-->
+            </a>
+        </article>
     </div> 
     <div class="contenedorGrandote">
         <div class="debajoDelBuscador">
