Prueba buscador para la lista de cola

--- a/Templates/pruebaBusqueda.html
+++ b/Templates/pruebaBusqueda.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Ejecutor de Métodos String</h1>
-    
+    <div class="coladereproduccion"></div>
+    <div class="player" id="player"></div>
     <div class="contenedor">
         <label for="texto-input">Texto:</label>
         <input type="text" id="texto-input" placeholder='Ejemplo: "Hola mundo"'> 
@@ -18,5 +19,6 @@
         <div class="result-pantalla" id="result-autor"> </div>
         <div class="result-pantalla" id="result-album"> </div>
     </div>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="../Dynamics/js/buscador.js"></script>
 </body>
