--- a/Statics/styles/pruebaBusqueda.css
+++ b/Statics/styles/pruebaBusqueda.css
@@ -31,15 +31,17 @@ input {
     box-sizing: border-box;
 }
         
-button {
+button{
     background-color: #4CAF50;
     color: white;
-    padding: 12px;
-    width: 100%;
+    width: 30px;
     cursor: pointer;
+    height: 20px;
+    text-align: center;
     font-size: 16px;
-    margin-top: 10px;
-
+    display: flex ;
+    align-items: center;
+    justify-content: center;
 }
         
 .result-pantalla {
@@ -48,4 +50,16 @@ button {
     background-color: #e8f5e9;
     /*min-height: 60px;*/
     font-family: 'Courier New', monospace;
+}
+.coladereproduccion{
+    height: 200px;
+    width: 200px;
+    border: 3px solid black;   
+}
+.player{
+    height: 200px;
+    width: 200px;
+    border: 3px solid black;  
+    display: flex;
+    align-items: center; 
 }
