--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -580,6 +580,8 @@ body{
     flex-direction: row;
     background-color: none;
     flex-wrap: wrap;
+    position: relative;
+    top: 50px;
 }
 .paraLaListaDeAlbumes{
     display: flex;
@@ -631,6 +633,8 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  top: 50px;
 }
 #contenedorDeCanciones{
   height: 750px;
@@ -652,9 +656,12 @@ body{
   align-items: center;
   justify-content: center;
   border: 5px solid #75b7bb;
+  cursor: pointer;
   font-size: 25px;
 }
-
+#contenedorAlbumCancion:hover{
+   transform: scale(1.1);
+}
 
 .mostrarAlbumesDelArtista {
   width: 100%;
