Modifiqué estilos formulario

--- a/Templates/inicioSesion.html
+++ b/Templates/inicioSesion.html
@@ -31,15 +31,15 @@
         </div> 
     </div>
     
-    <div id="vistaRegistrarse" class= "inactivo">
+    <div id="vistaRegistrarse" class= "inactivo" style="width: 4000px;">
         <div id="contieneFormReg">
             <form id="formRegistrarse" action="" method="post">
                 
                 <label for="nvoUsuario">Ingresa un nuevo nombre de usuario:</label><br>
-                <input type="text" id="nvoUsuario">
+                <input type="text" id="nvoUsuario" style="width: 100%;">
                 <span id="usuarioVacio" class="spansIS"></span>
                 <label for="nvoPassword">Ingresa nueva contraseña con al menos 8 dígitos:</label><br>
-                <input type="password" id="nvoPassword">
+                <input type="password" id="nvoPassword" style="width: 100%;">
                 <span id="contraNvaCorta" class="spansIS"></span>
                 <label for="descripcion">Añade alguna descripción o frase:</label><br>
                 <textarea id="descripcion" rows="4" cols="50"></textarea>
