Arreglé lo del contenedor de artistas

--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -88,7 +88,7 @@
             <div class="lineaCentral"></div><!--Línea que aparece cerca del centro-->
             
             <!--ESTO ES PARTE DE LA PANTALLA INICIAL-->  
-        <div class="cambiarDeVistaaArtista">
+        <div class="cambiarDeVistaaArtista" style="width: 100%;margin-top: 25px;height: 95%;" >
             <div id="seccionInicio" class="contenidoDerecho">
                 <div class="recomendacionesDia"><!--contenedor que encapsula toda la sección derecha-->
                 <div class="todasRecomendaciones">
