agregué un extra en img (2 opciones)

--- a/Statics/styles/creditos.css
+++ b/Statics/styles/creditos.css
@@ -1,3 +1,7 @@
+*{
+  cursor: url('../media/imgs/Normal\ Select.cur'), auto;
+}
+
 .rectangulo {
       font-family: "Tipografiadelmetro",sans-serif;
       width: 400px; /* Ancho del rectángulo */
