--- a/Statics/styles/vistaDeÁlbumes.css
+++ b/Statics/styles/vistaDeÁlbumes.css
@@ -3,6 +3,7 @@
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
+  cursor: url('../media/imgs/Normal\ Select.cur'), auto;
 }
 
 body {
