--- a/Statics/styles/vistaperfil.css
+++ b/Statics/styles/vistaperfil.css
@@ -1,3 +1,7 @@
+*{
+    cursor: url('../media/imgs/Normal\ Select.cur'), auto;
+}
+
 body{
     background: #2072A9;
     background: radial-gradient(circle, rgba(32, 114, 169, 1) 0%, rgba(38, 26, 71, 1) 100%);
