Inicio de la vista Mix

--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -115,10 +115,10 @@
                             </button>
                         </div>  
                         <div class="dosRec"><!--contenedor que incluye las recomendaciones de artistas y del álbum-->
-                            <button id="recomendacionMix">
+                            <div id="recomendacionMix">
                             <img src="../Statics/img/.jpg" class="album-img">
-                            <p>(nombre del Albúm)</p>
-                            </button>
+                            <p style="color: black;" style="margin: 0;" >(nombre del Albúm)</p>
+                            </div>
                             <div class="recomendacionArtista" id="contenedor-artistas">
                                 <button class="noFormato">
                                     <img src="../Statics/img/.jpg" class="artista-img">
@@ -172,6 +172,21 @@
                         </div>
                     </div>
                     <div id="contenedorDeCanciones">
+                    </div>
+                </div>
+            </div>
+            <!--MIX DE ALGO-->
+            <div id="seccionMix" class="contenidoDerecho" style="display: none;">
+                <div class="seccionDerechaMix">
+                    <div id="infoDelMix">
+                        <img id="imagendelAlbum">
+                        <div id="infoAlbum" >
+                            <div id="nombreMix">Mix Romántica</div>
+                            <div id="autorAlbum"></div>
+                        </div>
+                    </div>
+                    <div id="contenedorDeCanciones">
+                        <div id="contenedorAlbumCancion">A$AP FOREVER</div>
                     </div>
                 </div>
             </div>
