--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -160,7 +160,7 @@ body{
     align-self: center;
     gap: 15px;
 }
-#recomendacionMix{
+.recomendacionMix{
     width: 215px;
     height: 215px;
     background-color: #eeeeee;
@@ -171,14 +171,15 @@ body{
     align-content: center;
     align-items: center;
     justify-items: center;
+    font-size: 20px;
+    color: #000000;
 }
 .recomendacionArtista{
-    width: 200px;
-    height: 200px;
+    width: 235px;
+    height: 235px;
     background-color: #eeeeee;
     border-radius: 15px;
     text-align: center;
-    padding: 10px;
     align-content: center;
     gap:10px;
 }
@@ -339,6 +340,7 @@ body{
   flex-direction: column;
   gap: 0.5em;
   display: none;
+  z-index: 100;
 }
 #player{
   width: 70%;
@@ -600,16 +602,38 @@ body{
     margin: 5px;
 }
 #infoDelAlbum{
-  width: 80%;
+  width: 60%;
   border: 3px solid #75b7bb;;
   border-radius: 30px;
   display: flex;
   align-items: center;
-  align-content: center;
   position: relative;
   gap: 3em;
   padding: 10px;
   background-color: rgb(255, 255, 255);
+}
+#infoDelMix{
+  width: 60%;
+  border: 3px solid #bba875;;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  gap: 3em;
+  padding: 10px;
+  background-color: rgb(255, 255, 255);
+}
+#contenedorAlbumMix{
+  width: 80%;
+  border-radius: 30px;
+  background-color: white;
+  display: flex;
+  color: black;
+  align-items: center;
+  justify-content: center;
+  border: 5px solid #bba875;
+  cursor: pointer;
+  font-size: 20px;
 }
 #imagendelAlbum{
   width: 150px;
@@ -629,6 +653,9 @@ body{
 #nombreAlbum{
   color:#000000;
 }
+#nombreMix{
+  color: #000000;
+}
 .seccionDerechaAlbum{
   display: flex;
   flex-direction: column;
@@ -636,19 +663,26 @@ body{
   position: relative;
   top: 50px;
 }
+.seccionDerechaMix{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  top: 50px;
+}
 #contenedorDeCanciones{
-  height: 750px;
   width: 80%;
   position: relative;
   border-radius: 30px;
-  top: 50px;
+  top: 40px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 1em;
 }
 #contenedorAlbumCancion{
-  width: 100%;
-  height: 50px;
+  width: 80%;
   border-radius: 30px;
   background-color: white;
   display: flex;
@@ -657,7 +691,7 @@ body{
   justify-content: center;
   border: 5px solid #75b7bb;
   cursor: pointer;
-  font-size: 25px;
+  font-size: 20px;
 }
 #contenedorAlbumCancion:hover{
    transform: scale(1.1);
