Agregué la sección de canciones

--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="menu-item">
-                    <div class="centrarIconosDelHamburgesa">
+                    <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('seccionCanciones')">
                         <i class="fas fa-music"></i>
                         <span>Canciones</span>
                     </div>
@@ -141,17 +141,17 @@
             <!--ARTISTAS-->
             <div id="seccionArtistas" class="contenidoDerecho" style="display: none;">
                 <div class="secciónDerechaArtistas">
-                <div class="contenedorDeArtistasGeneral">
-                    <div class="contenedorTituloArtistas">
-                        <div>
-                            <h1>Artistas</h1>
+                    <div class="contenedorDeArtistasGeneral">
+                        <div class="contenedorTituloArtistas">
+                            <div>
+                                <h1>Artistas</h1>
+                            </div>
+                        </div>
+                        <div class="contenedorListaDeArtistas">
+                            <!--LISTA DE ARTISTAS CON OVER-->  
                         </div>
                     </div>
-                    <div class="contenedorListaDeArtistas">
-                        <!--LISTA DE ARTISTAS CON OVER-->  
-                    </div>
                 </div>
-            </div>
             </div>
             <!--ÁLBUMES-->
             <div id="seccionAlbumes" class="contenidoDerecho" style="display: none;">
@@ -172,6 +172,21 @@
                         </div>
                     </div>
                     <div id="contenedorDeCanciones">
+                    </div>
+                </div>
+            </div>
+            <!--CANCIONESSS-->
+            <div id="seccionCanciones" class="contenidoDerecho" style="display: none;">
+                <div class="seccionDerechaCanciones">
+                    <div class="contenedorDeCancionesGeneral">
+                        <div class="contenedorListaCanciones">
+                            <div>
+                                <h1>Canciones</h1>
+                            </div>
+                        </div>
+                        <div class="contenedorListaDeCanciones">
+                            <!--LISTA DE Canciones CON OVER-->  
+                        </div>
                     </div>
                 </div>
             </div>
