--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -716,3 +716,63 @@ body{
   margin-top: 8px;
   font-size: 1rem;
 }
+/*Para las canciones*/
+.seccionDerechaCanciones{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    margin-left: 5px;
+    align-self: center;
+    justify-content: center;
+    align-content: center;
+    justify-self: center;
+}
+.contenedorDeCancionesGeneral{
+    display: flex;
+    width: 80%;
+    height: 100%;
+    border-radius: 50px;
+    background-color: var(--azulApagado);
+    flex-direction: column;
+}
+.contenedorListaCanciones{
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 15%;
+    border-radius: 50px;
+    background-color: var(--grisBlanco);
+    color: white;
+    text-align: center;
+    justify-content: center;
+}
+.contenedorListaDeCanciones{
+    display: flex;
+    width: 100%;
+    height: 85%;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    overflow: auto;
+    flex-direction: column;
+}
+.paraLaListaDeCanciones{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    background-color: var(--grisBlanco);
+    color: white;
+    margin: 5px;
+    width: 80%;
+    border-radius: 8px;
+    font-size: 20px;
+}
+.cancionesList{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+}
