--- a/Templates/vistaperfil.html
+++ b/Templates/vistaperfil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista Perfil</title>
-    <link rel="stylesheet" href="../Statics/styles/vistaperfil.css">
+    <link rel="stylesheet" href="..\Statics\styles\vistaperfil.css">
 </head>
 <body>
     <div class="contenedorPerfil">
