--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -758,9 +758,9 @@ body{
     height: 85%;
     align-items: center;
     align-content: center;
-    justify-content: center;
     overflow: auto;
     flex-direction: column;
+    justify-content: space-between;
 }
 .paraLaListaDeCanciones{
     display: flex;
