Actualiza cookies + usuario único

--- a/Templates/vistaperfil.html
+++ b/Templates/vistaperfil.html
@@ -29,7 +29,7 @@
 
                 <label for="editarDescripcion">Descripción:</label>
                 <input type="text" id="editarDescripcion" placeholder="Añade una descripción">
-
+                <div id="mensaje"></div>
                 <button id="guardarCambios">Guardar</button>
             </div>
             <div class="infoDelUsuario">
