--- a/Statics/styles/inicioCss.css
+++ b/Statics/styles/inicioCss.css
@@ -1,7 +1,10 @@
 *{
     cursor: url('../media/imgs/Normal\ Select.cur'), auto;
 }
-
+button:hover {
+  cursor: pointer;
+  background-color: #01042046
+}
 body{
     display: flex;
     justify-content: center;
