--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -119,16 +119,16 @@
                             <img src="../Statics/img/.jpg" class="album-img">
                             <p>(nombre del Albúm)</p>
                             </button>
-                            <div class="recomendacionArtista" id="contenedor-artistas">
+                            <div class="recomendacionArtista">
                                 <button class="noFormato">
                                     <img src="../Statics/img/.jpg" class="artista-img">
                                     <p>nombre del artista1</p>
                                 </button>
-                                <button class="noFormato" id="contenedor-artistas">
+                                <button class="noFormato">
                                     <img src="../Statics/img/.jpg" class="artista-img">
                                     <p>nombre del artista2</p>
                                 </button>
-                                 <button class="noFormato" id="contenedor-artistas">
+                                 <button class="noFormato">
                                     <img src="../Statics/img/.jpg" class="artista-img">
                                     <p>nombre del artista3</p>
                                 </button>
