--- a/Templates/vistaperfil.html
+++ b/Templates/vistaperfil.html
@@ -9,7 +9,7 @@
 <body>
     <div class="contenedorPerfil">
         <div class="ladoIzquierdoPerfil">
-            <!--Contenedor para Añadir la barra del menú-->
+            <button id="regresarBtn">Volver al inicio</button>
         </div>
         <div class="ladoDerechoPerfil">
             <div class="fotos">
