--- a/Statics/styles/styles.css
+++ b/Statics/styles/styles.css
@@ -1,3 +1,7 @@
 *{
     cursor: url('../media/imgs/Normal\ Select.cur'), auto;
 }
+button:hover {
+  cursor: pointer;
+  background-color: #01042046
+}
