--- a/Statics/styles/vistaperfil.css
+++ b/Statics/styles/vistaperfil.css
@@ -68,6 +68,15 @@ body{
     width: 100%;
     margin-top: 20px;
 }
+#regresarBtn{
+background-color: #4da6ff96;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  padding: 12px 24px;
+  font-size: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 #editarPerfil {
     background-color: #5a6f98;
     color: white;
