algo de vistainicial.css

--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -244,7 +244,7 @@ body{
   transform: scale(1.1);
 }
 #mixHipHop{
-  background-color: #01b7c2;
+  background-color: rgb(1, 183, 194);
 }
 #mixRock{
   background-color: #ffb82e;
