--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -82,7 +82,8 @@
                 <div class="cuadroMixes" id="contenedorMixesOcultar"> <!--contenedor que incluye las tres recomendaciones principales-->
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
-                    <button class="botonesMix botonesAnim" id="">Mix</button>
+                    <button class="botonesMix botonesAnim" id="">Mix</button><br>
+                    <button class="TuMix">Tu Mix</button><br>
                 </div> 
             </div>
             <div class="lineaCentral"></div><!--Línea que aparece cerca del centro-->
@@ -180,13 +181,12 @@
                 <div class="seccionDerechaMix">
                     <div id="infoDelMix">
                         <img id="imagendelAlbum">
-                        <div id="infoAlbum" >
-                            <div id="nombreMix">Mix Romántica</div>
+                        <div id="infoMix" >
+                            <div id="nombreMix">Mix </div>
                             <div id="autorAlbum"></div>
                         </div>
                     </div>
-                    <div id="contenedorDeCanciones">
-                        <div id="contenedorAlbumCancion">A$AP FOREVER</div>
+                    <div id="contenedorDeCancionesMix">
                     </div>
                 </div>
             </div>
