Arreglé el problema con las vistas de álbums

--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -190,6 +190,14 @@
                     </div>
                 </div>
             </div>
+            <!--VISTA DE ÁLBUMES POR SELECCIÓN-->
+            <div id="seccionAlbumSelec" class="contenidoDerecho" style="display: none">
+                <div class="secciónDerechaAlbumes">
+                    <div class="contenedorDeTodosLosAlbumes">
+                    <!--AQUÍ VAN A APARECER LOS ALBUMES-->
+                    </div>
+                </div>
+            </div>
         </div>
         </div>
     </div>
