--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -116,7 +116,7 @@
                             </button>
                         </div>  
                         <div class="dosRec"><!--contenedor que incluye las recomendaciones de artistas y del álbum-->
-                            <div id="recomendacionMix">
+                            <div id="recomendacionAlbum" class="recomendacionMix">
                             <img src="../Statics/img/.jpg" class="album-img">
                             <p style="color: black;" style="margin: 0;" >(nombre del Albúm)</p>
                             </div>
