Salve el proyecto

--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -187,6 +187,9 @@
                         </div>
                     </div>
                     <div id="contenedorDeCancionesMix">
+                    </div>  
+                </div>  
+            </div>  
             <!--CANCIONESSS-->
             <div id="seccionCanciones" class="contenidoDerecho" style="display: none;">
                 <div class="seccionDerechaCanciones">
