Botones Siguiente y Anterior del Reproductor

--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -71,7 +71,11 @@
                     <div id="player"></div>
                     <div class="controls-bar">
                         <input type="range" name="" id="seekBar">
+                        <div id="controlBtns">
+                            <i id="cancionAntes" ><i class="fas fa-backward"></i></i>
                             <i id="playPauseBtn"><i class="fas fa-play"></i></i>
+                            <i id="cancionDespues"> <i class="fas fa-forward"></i></i>
+                        </div>                        
                         <div id="volumen">
                             <i id="muteBtn"><i class="fa-solid fa-volume-high"></i></i> 
                         <input type="range" max="100"  id="volumeSlider">
