--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -362,6 +362,37 @@ body{
   border-radius: 30px;
 
 }
+#controlBtns{
+  width: 100%;
+  display: flex;
+  justify-self: center;
+  justify-content: center;
+  gap: 1em;
+}
+#cancionAntes{
+    width: 30px;
+    height: 30px;
+    background-color: #f0f0f0; 
+    border-radius: 50%;        
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    color: #3a3737;          
+    cursor: pointer;
+}
+#cancionDespues{
+    width: 30px;
+    height: 30px;
+    background-color: #f0f0f0; 
+    border-radius: 50%;        
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    color: #3a3737;          
+    cursor: pointer;
+}
 #playPauseBtn{
     width: 30px;
     height: 30px;
