--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -6,7 +6,7 @@
     <title>Vista Inicial</title>
     <link rel="stylesheet" href="../Statics/styles/vistainicial.css">
     <script src="../Dynamics/js/baseDeDatos.js"></script>
-    <link rel="icon" href="../Statics/media/imgs/icon_vistas.jpg" type="image/png">
+    <link rel="icon" href="../Statics/media/imgs/BackgroundEraser_20250627_044443401.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body> 
